Crash on Info Editor "console" #50530

Closed
opened 2017-01-26 09:35:05 +01:00 by Dalai Felinto · 6 comments

Bug: 99cfad6a

How to crash:

  1. Show the console above the Info Editor
  2. Do any operator (e.g., Add an Object)

10945==ERROR: AddressSanitizer: stack-buffer-overflow on address 0x7fff22bdb9d3 at pc 0x55bf114032dd bp 0x7fff22bdb730 sp 0x7fff22bdb728

READ of size 1 at 0x7fff22bdb9d3 thread T0
- 0 0x55bf114032dc in immUniformColor4ubv /home/guest/src/blender/blender/source/blender/gpu/gawain/immediate.c:812
- 1 0x55bf0f9a68f9 in console_draw_string /home/guest/src/blender/blender/source/blender/editors/space_info/textview.c:197
- 2 0x55bf0f9a8dfa in textview_draw /home/guest/src/blender/blender/source/blender/editors/space_info/textview.c:356
- 3 0x55bf0f9ae3d6 in info_textview_main__internal /home/guest/src/blender/blender/source/blender/editors/space_info/info_draw.c:262
- 4 0x55bf0f9ae7c5 in info_textview_main /home/guest/src/blender/blender/source/blender/editors/space_info/info_draw.c:289
- 5 0x55bf0f9a997e in info_main_region_draw /home/guest/src/blender/blender/source/blender/editors/space_info/space_info.c:168
- 6 0x55bf105ed973 in ED_region_do_draw /home/guest/src/blender/blender/source/blender/editors/screen/area.c:564
- 7 0x55bf0f86dcaa in wm_method_draw_triple /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:567
- 8 0x55bf0f8702e0 in wm_draw_update /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:967
- 9 0x55bf0f8619eb in WM_main /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm.c:495
- 10 0x55bf0f858250 in main /home/guest/src/blender/blender/source/creator/creator.c:527
- 11 0x7fe15b4192b0 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x202b0)

Bug: 99cfad6a How to crash: 1. Show the console above the Info Editor 2. Do any operator (e.g., Add an Object) ## 10945==ERROR: AddressSanitizer: stack-buffer-overflow on address 0x7fff22bdb9d3 at pc 0x55bf114032dd bp 0x7fff22bdb730 sp 0x7fff22bdb728 READ of size 1 at 0x7fff22bdb9d3 thread T0 - 0 0x55bf114032dc in immUniformColor4ubv /home/guest/src/blender/blender/source/blender/gpu/gawain/immediate.c:812 - 1 0x55bf0f9a68f9 in console_draw_string /home/guest/src/blender/blender/source/blender/editors/space_info/textview.c:197 - 2 0x55bf0f9a8dfa in textview_draw /home/guest/src/blender/blender/source/blender/editors/space_info/textview.c:356 - 3 0x55bf0f9ae3d6 in info_textview_main__internal /home/guest/src/blender/blender/source/blender/editors/space_info/info_draw.c:262 - 4 0x55bf0f9ae7c5 in info_textview_main /home/guest/src/blender/blender/source/blender/editors/space_info/info_draw.c:289 - 5 0x55bf0f9a997e in info_main_region_draw /home/guest/src/blender/blender/source/blender/editors/space_info/space_info.c:168 - 6 0x55bf105ed973 in ED_region_do_draw /home/guest/src/blender/blender/source/blender/editors/screen/area.c:564 - 7 0x55bf0f86dcaa in wm_method_draw_triple /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:567 - 8 0x55bf0f8702e0 in wm_draw_update /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:967 - 9 0x55bf0f8619eb in WM_main /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm.c:495 - 10 0x55bf0f858250 in main /home/guest/src/blender/blender/source/creator/creator.c:527 - 11 0x7fe15b4192b0 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x202b0)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Added subscribers: @SebastianWitt, @MikeErwin

Added subscribers: @SebastianWitt, @MikeErwin
Sebastian Witt was assigned by Dalai Felinto 2017-01-26 09:36:44 +01:00
Author
Owner

Likely since 2de882e8, @SebastianWitt can you take a look at that?

Likely since 2de882e8, @SebastianWitt can you take a look at that?
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Owner

Fixed on 290e080d

Fixed on 290e080d
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50530
No description provided.