Fix T50530: Crash on Info Editor "console"

Introduced on rB2de882e8 - the original size of the array was neglected